refactor(BE): RubricScorer score 1~3 정수 강제 (null 제거)